# blackb6a-ctf-2023-challenges

./: .gitignore  README.md
.challengetemplate/: chal.yml
01-how-to-stop-time/: README.md  chal.yml
01-rofl-your-own/: README.md
02-Quantum_Flip/: dump  logloglog  rev_mt.py  rev_mt.sage  rev_mt.sage.py  rev_mt2.ipynb  rev_mt2.py  rev_mt2.sage  rev_mt2.sage.py  rev_mt3.sage  test  test.cpp  test.py  test.sage  test.sage.py  test2.py  test2.sage  test2.sage.py  test_numpy.py
02-quantum-flip/: README.md  chal.yml
03-grhkm_s-babyrsa/: README.md  chal.yml
03-warmup-rsa/: README.md  chal.yml
04-embedded-rtos/: README.md  chal.yml
07-telepathy/: README.md  chal.yml
08-forkmachine/: README.md  chal.yml
09-class-pollution/: README.md
09-hag/: README.md  chal.yml
10-kernpass/: README.md  chal.yml
100-sanity-check/: README.md  chal.yml
101-feedback/: README.md  chal.yml
11-disconnect/: README.md  chal.yml
13-rusty/: Cargo.toml  README.md  rusty-debug.elf  rusty-release.elf
15-instant chat/: README.md  chal.yml
15-instant-chat/: README.md  chal.yml
16-carpe-diem/: README.md  chal.yml
16-red-scarf/: README.md
16-xsleak/: README.md
17-kill-t-browser/: README.md  chal.yml
18-amnesia/: README.md  chal.yml
19-river-crab-extinction/: README.md  chal.yml
20-isekai-tensei-hakka/: README.md  chal.yml
22-vs-code/: README.md  chal.yml
23-sqlmap-as-a-service/: README.md  chal.yml
24-key-exchange/: README.md  chal.yml
25-baby-count/: README.md
26-tls-sidh-sidh-sidh/: Cargo.toml
26-tls-sidh-sidh-sidh/src/: client.rs  main.rs  server.rs
(+316 files in other folders)
